[작업] admin - 공지사항 , FAQ

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 /.bundle
 
 # Ignore all logfiles and tempfiles.
+
+config/application.yml
+config/database.yml
+config/secrets.yml
 /log/*
 !/log/.keep
 /tmp
