[작업] client - 문구및 여러개 업데이트

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 
 # Ignore all logfiles and tempfiles.
 
-config/application.yml
-config/database.yml
-config/secrets.yml
+/config/application.yml
+/config/database.yml
+/config/secrets.yml
 /log/*
 !/log/.keep
 /tmp
